# powerpc-utils

./: .gitignore  .travis.yml  COPYRIGHT  Changelog  Makefile.am  Makefile.in  README  autogen.sh  bootstrap.sh  configure  configure.ac  powerpc-utils.spec  powerpc-utils.spec.in
.github/workflows/: main.yml
addon/: Makefile  README  powerpc-utils-sles10-addons.spec
doc/: activate_firmware.doxycfg  nvram.doxycfg  rtas_ibm_get_vpd.doxycfg  serv_config.doxycfg  set_poweron_time.doxycfg  uesensor.doxycfg  usysident.doxycfg
man/: Makefile.am  Makefile.in  activate_firmware.8  amsstat.1  amsvis.1  bootlist.8  drmgr-hooks.8  drmgr.8  errinjct.8  hvcsadmin.8  ibmvscsis.conf.8  ibmvscsis.sh.8  lparcfg.5  lparnumascore.8  lparstat.8  lsslot.8  nvram.8  ofpathname.8  ppc64_cpu.8  rtas_dbg.8  rtas_dump.8  rtas_ibm_get_vpd.8  serv_config.8  set_poweron_time.8  smtd.8  smtstate.8  snap.8  sys_ident.8  uesensor.8  update_flash.8  usysattn.8  usysident.8  vcpustat.8  vscsisadmin.8
scripts/: Makefile.am  Makefile.in  amsstat  bootlist  functions.suse  hcnmgr  hvcsadmin  ibmvscsis.sh  ls-vdev  ls-veth  ls-vscsi  lsdevinfo  ofpathname  ppc64_cpu  pseries_platform  rtas_dump  smtd  smtstate.in  snap  update_flash  update_flash_nv  vscsisadmin
scripts/amsvis/: Makefile.in  amsvis  setup.py.in
scripts/amsvis/powerpcAMS/: amsdata.py  amsnet.py  amswidget.py
src/: Makefile.am  Makefile.in  activate_fw.c  librtas_error.c  librtas_error.h  lparstat.c  lparstat.h  lsprop.c  nvram.c  nvram.h  ppc64_cpu.c  rtas_dbg.c  rtas_event_decode.c  rtas_ibm_get_vpd.c  serv_config.c  set_poweron_time.c  sys_ident.c  uesensor.c  usysident.c  vcpustat.c
src/common/: cpu_info_helpers.c  cpu_info_helpers.h  librtas_error.c  librtas_error.h  pseries_platform.c  pseries_platform.h
src/drmgr/: Makefile.am  Makefile.in  common.c  common_cpu.c  common_numa.c  common_numa.h  common_ofdt.c  common_pci.c  dr.h  dracc_chrp_acc.c  drcpu.h  drmem.h  drmgr.c  drmig_chrp_pmig.c  drpci.h  drslot_chrp_cpu.c  drslot_chrp_hea.c  drslot_chrp_mem.c  drslot_chrp_pci.c  drslot_chrp_phb.c  drslot_chrp_slot.c  lparnumascore.c  lsslot.c  lsslot.h  lsslot_chrp_cpu.c  ofdt.h  options.c  prrn.c  rtas_calls.c  rtas_calls.h
src/errinjct/: dcache.c  errinjct.c  errinjct.h  icache.c  ioa_bus_error.c  open_close.c  platform.c  slb.c  tlb.c
systemd/: hcn-init.service.in  hcn-init.service.in.in  hcn-init.service.suse.in  smt_init.service.in  smt_off.service.in  smtd.service.in  smtstate.service.in
var/lib/powerpc-utils/: smt.state
