bin_SCRIPTS = amsstat
dist_bin_SCRIPTS = amsstat

sbin_SCRIPTS = update_flash hvcsadmin vscsisadmin rtas_dump snap	\
	       bootlist ofpathname lsdevinfo

dist_sbin_SCRIPTS = update_flash hvcsadmin vscsisadmin rtas_dump snap	\
	            bootlist ofpathname lsdevinfo

initdir = /etc/init.d
init_DATA = ibmvscsis.sh
dist_init_DATA = ibmvscsis.sh

